--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.29.0",
-    "html2pptx": "^0.0.5",
+    "html2pptxgenjs": "^0.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
