--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@aws-sdk/credential-providers": "^3.975.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -51,6 +52,8 @@
     "html2pptxgenjs": "^0.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mongodb": "7.0.0",
+    "mongodb-client-encryption": "7.0.0",
     "next-themes": "^0.3.0",
     "pptxgenjs": "^4.0.1",
     "react": "^18.3.1",
