--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:qe": "node scripts/test-queryable-encryption.cjs"
   },
   "dependencies": {
     "@aws-sdk/credential-providers": "^3.975.0",
@@ -52,8 +53,8 @@
     "html2pptxgenjs": "^0.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
-    "mongodb": "^7.0.0",
-    "mongodb-client-encryption": "^7.0.0",
+    "mongodb": "7.0.0",
+    "mongodb-client-encryption": "7.0.0",
     "next-themes": "^0.3.0",
     "pptxgenjs": "^4.0.1",
     "react": "^18.3.1",
@@ -75,7 +76,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^22.16.5",
+    "@types/node": "^22.19.7",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
@@ -90,7 +91,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19",
+    "vite": "^7.3.1",
     "vitest": "^3.2.4"
   }
 }
