--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:qe": "node scripts/test-queryable-encryption.cjs"
   },
   "dependencies": {
-    "@aws-sdk/credential-providers": "^3.975.0",
+    "@aws-sdk/credential-providers": "^3.992.0",
     "@hookform/resolvers": "^3.10.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -54,8 +54,8 @@
     "html2pptxgenjs": "^0.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
-    "mongodb": "7.0.0",
-    "mongodb-client-encryption": "7.0.0",
+    "mongodb": "^7.0.0",
+    "mongodb-client-encryption": "^7.0.0",
     "next-themes": "^0.3.0",
     "pptxgenjs": "^4.0.1",
     "react": "^18.3.1",
