Stop tracking lab runner scripts and IDE folders; add to .gitignore
- Untrack: createKey.cjs, testCSFLE.cjs, createDeks.cjs, createQECollection.cjs, insertQEData.cjs, queryQERange.cjs (attendees create locally)
- Untrack: .lovable, .agent (IDE/AI tooling, not part of workshop repo)
- .gitignore updated so these are not re-added

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@ dist-ssr
 *.sln
 *.sw?
 scripts/venv/*
+
+# Lab runner scripts (attendees create these locally; do not commit)
+createKey.cjs
+testCSFLE.cjs
+createDeks.cjs
+createQECollection.cjs
+createQECollection.Cjs
+insertQEData.cjs
+queryQERange.cjs
+
+# IDE / AI tooling (local or generated)
+.lovable
+.agent
